# GeodeLinuxAPI

./: CMakeLists.txt  README.md  logo.psd  mod.json
include/: export_macros.hpp  filemanagerapi.hpp  filepickerapi.hpp  linuxapi.hpp  notificationsapi.hpp  wineutils.hpp  xdgapi.hpp
src/: filemanagerapi.cpp  filepickerapi.cpp  linuxapi.cpp  main.cpp  notificationsapi.cpp  wineutils.cpp  xdgapi.cpp
src/include/: filepickerapi.hpp  linuxapi.hpp
src/python-side/: linux-api-server.desktop  linux-api-server.py
